# my-site

./: .gitignore  Dockerfile  k8s-deployment.yml  manage.py  pyproject.toml
my_site/: asgi.py  urls.py  wsgi.py
my_site/settings/: base.py  dev.py  prod.py
