[tool.poetry]
name = "my-site"
version = "0.1.0"
description = "My site"
authors = ["Alejandro Otero <lexotero@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "my_site"}]

[tool.poetry.dependencies]
python = "^3.11"
django = ">=3.2,<4.0"
django-cms = "^3.11.3"
djangocms-text-ckeditor = "^5.1.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
ruff = "^0.0.282"
isort = "^5.12.0"
poethepoet = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
